fix bug align top right button

--- a/phyloio/src/interface.css
+++ b/phyloio/src/interface.css
@@ -90,6 +90,8 @@ background-color: #198754;
 /* TOP RIGHT SUB MENU */
 
 .tr-buttons{
+    flex-direction: column;
+    align-self: end;
     display: flex;}
 
 .tr-buttons  * {
